Fixed padding, spacing and copy

--- a/style.css
+++ b/style.css
@@ -92,8 +92,8 @@ body{
 }
 
 .text-large{
-  font-size: 0.85em;
-  font-weight: 400;
+  font-size: 0.75em;
+  font-weight: 300;
 }
 
 .empty-space{
@@ -138,10 +138,24 @@ footer{
 
   .intro-text{
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 200;
     text-align: left;
-    width: auto;
+    width:95%;
+
   }
+
+
+.previous-roles{
+  height: fit-content;
+  margin-bottom: 0;
+  margin-top: -10px;
+  /* background-color: red; */
+}
+
+.searching{
+/* background-color: blue; */
+margin-top: 16px;
+}
 
   .neel-photo{
     width: 450px;
@@ -169,7 +183,7 @@ h1, h2, h3, h4, h5{
 h1{
   font-weight: 700;
   font-size: 40px;
-  line-height: 24px;
+  line-height: 40px;
 }
 
 /* h2{
@@ -238,7 +252,7 @@ a:link.button, a:visited.button, a:hover.button, a:active.button {
 
   .fa-regular{
     font-size: 18px;
-    margin-right: 8px;
+    margin-right: 8px;s
   }
 
   .rotate-right-onhover, .rotate-left-onhover{
@@ -469,7 +483,23 @@ a:link.button, a:visited.button, a:hover.button, a:active.button {
 
       h1{
         font-weight: 600;
-        font-size: 28px;
-        line-height: 48px;
+        font-size: 34px;
+        line-height: 40px;
       }
+
+      .previous-roles{
+        height: fit-content;
+        margin-bottom: 0;
+        /* background-color: red; */
+      }
+      
+      .searching{
+      /* background-color: blue; */
+      margin-top: 16px;
+      }
+
+      .text-small{
+        font-size: .70em;
+        padding-bottom: 48px;
+    }
   }
